--- a/ud843-QuakeReport-starting-point/app/src/main/res/values/strings.xml
+++ b/ud843-QuakeReport-starting-point/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
 -->
 <resources>
     <string name="app_name">Quake Report</string>
+
+    <string name="empty_view_text">No Earthquakes Found</string>
 </resources>
